# ml-flashpoint

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  cloudbuild.yaml  louhi_presubmit.yaml  mkdocs.yml  pyproject.toml  run_coverage.sh  tmp_release_notes.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build-and-test.yml  build_and_test.yml  docs-site.yml  docs.yml  post-coverage-comment.yml
docs/: README.md  changelog.md  troubleshooting.md  user-guide.md
scripts/: parse_log_and_summarize.py  parse_log_and_summarize_nemo.py
src/ml_flashpoint/adapter/megatron/: __init__.py  load_strategies.py  save_strategies.py  utils.py
src/ml_flashpoint/adapter/nemo/: checkpoint_callback.py  checkpoint_io.py  checkpoint_loader.py  nemo_checkpoint_loader.py  step_timer_callback.py  wrapper_util.py
src/ml_flashpoint/adapter/nemo_rl/: __init__.py  checkpoint_manager.py  megatron_policy_worker_impl.py  wrapper_util.py  wrapper_util_rl.py
src/ml_flashpoint/adapter/pytorch/: custom_state_dict_saver.py  memory_storage_writer.py
src/ml_flashpoint/checkpoint_object_manager/: buffer_io.py  buffer_metadata.py  checkpoint_object_manager.py
src/ml_flashpoint/checkpoint_object_manager/buffer_object/: CMakeLists.txt  bindings.cpp  buffer_helper.cpp  buffer_helper.h  buffer_object.cpp  buffer_object.h  buffer_pool.cpp  buffer_pool.h
src/ml_flashpoint/checkpoint_object_manager/buffer_object/test/: buffer_object_test.cpp
src/ml_flashpoint/checkpoint_object_manager/object_manager/: CMakeLists.txt  bindings.cpp  object_manager.cpp  object_manager.h
src/ml_flashpoint/core/: buffer_pool.py  checkpoint_loader.py  checkpoint_saver.py  defaults.py  mlf_logging.py  tensor_header.py  utils.py
src/ml_flashpoint/core/async_writer/: CMakeLists.txt  bindings.cpp  checkpoint_writer.cpp  checkpoint_writer.h  pybind11_futures.h
src/ml_flashpoint/example_cpp/: CMakeLists.txt  bindings.cpp  example_cpp.cpp  example_cpp.h  example_cpp_test.cpp
src/ml_flashpoint/replication/: replication_manager.py
src/ml_flashpoint/replication/transfer_service/: CMakeLists.txt  bindings.cpp  connection_pool.cpp  connection_pool.h  transfer_service.cpp  transfer_service.h
tests/adapter/megatron/: test_load_strategies.py  test_save_strategies.py
tests/adapter/nemo/: test_auto_resume.py  test_checkpoint_callback.py  test_checkpoint_io.py  test_nemo_checkpoint_loader.py  test_step_timer_callback.py  test_wrapper_util.py
tests/adapter/nemo_rl/: test_checkpoint_manager.py  test_megatron_policy_worker_impl.py  test_wrapper_util.py  test_wrapper_util_rl.py
tests/adapter/pytorch/: test_custom_state_dict_saver.py  test_memory_storage_reader.py  test_memory_storage_writer.py
tests/checkpoint_object_manager/: test_buffer_io.py  test_checkpoint_object_manager.py
tests/checkpoint_object_manager/buffer_object/: buffer_helper_test.cpp
tests/checkpoint_object_manager/object_manager/: object_manager_test.cpp  test_object_manager_bindings.py
tests/core/: test_buffer_pool.py  test_checkpoint_loader.py  test_checkpoint_saver.py  test_cpp_buffer_pool.py  test_mlf_logging.py  test_utils.py
tests/example_cpp/: test_example_cpp.py
tests/replication/: test_replication_manager.py  test_replication_manager_e2e.py  test_transer_service.py
tests/replication/transfer_service/: connection_pool_test.cpp  mlf_log_sink_test.cpp  transfer_service_p2p_test.cpp
